LimitReduction.isMonitoringOnly() support
Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>